fix bullet spacing

--- a/scenarioA/css/fonts-plus-homepage.css
+++ b/scenarioA/css/fonts-plus-homepage.css
@@ -239,7 +239,7 @@ section.otp h2 {
 
 main.container .lnkbx li {
 	font-size: 19px !important;
-	line-height: 25px !important;
+	line-height: 30px !important;
 }
 
 /* most requested on home page */
